--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -25,6 +25,9 @@ psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 Pygments==2.19.1
+pytest==8.4.1
+pytest-cov==6.2.1
+pytest-mock==3.14.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==27.0.0
